--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -21,3 +21,9 @@ body {
 .width-100 {
   width: 100%;
 }
+
+.app-name-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
